@startuml
'https://plantuml.com/class-diagram

package StateManagement {
    interface IFetchData<TEntity> {
        void load()
    }

    interface IBuildState<TState> {
        Widget build(StateBuildFunction<TState> builder)
    }

    class DataLoaderCubit
    class LoaderState
    class LoaderStateBuilder
}

interface EntityListGateway<TEntity> {}

class EntityListBuilder<TEntity> {
    Widget build(BuildContext context)
}

class StateBuilder<TState> {
    Widget build(BuildContext context)
}

DataLoaderCubit -> LoaderState: "produces"
LoaderState <- LoaderStateBuilder: "consumes"

IFetchData <|.. DataLoaderCubit
IBuildState <|.. LoaderStateBuilder
DataLoaderCubit o--> EntityListGateway

StateBuilder o--> IBuildState
EntityListBuilder o-> StateBuilder

hide fields
hide LoaderState members
hide EntityListGateway members
hide DataLoaderCubit members
hide LoaderStateBuilder members

@enduml
